--- a/speakers.html
+++ b/speakers.html
@@ -5,53 +5,6 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Speakers - Eleos Conference 2026</title>
   <link rel="stylesheet" href="style.css">
-  <style>
-    /* Speaker cards */
-    .speakers-container {
-      display: grid;
-      grid-template-columns: repeat(auto-fit, minmax(280px, 1fr));
-      gap: 2rem;
-      max-width: 1200px;
-      margin: 2rem auto;
-      padding: 1rem;
-    }
-
-    .speaker-card {
-      background: #fff;
-      border-radius: 20px;
-      padding: 1.5rem;
-      box-shadow: 0 2px 8px rgba(0,0,0,0.1);
-      text-align: center;
-    }
-
-    .speaker-card img {
-      width: 150px;
-      height: 150px;
-      object-fit: cover;
-      border-radius: 50%;
-      margin-bottom: 1rem;
-      box-shadow: 0 2px 6px rgba(0,0,0,0.15);
-    }
-
-    .speaker-card h3 {
-      margin: 0.5rem 0;
-      font-size: 1.3rem;
-      color: #222;
-    }
-
-    .speaker-card p {
-      font-size: 0.95rem;
-      color: #444;
-      line-height: 1.5;
-      text-align: left;
-    }
-
-    .speaker-church {
-      font-style: italic;
-      color: #666;
-      margin-bottom: 1rem;
-    }
-  </style>
 </head>
 <body>
   <header>
@@ -67,53 +20,60 @@
   </header>
 
   <main>
-    <h1 style="text-align:center;">Meet Our Speakers</h1>
-    <div class="speakers-container">
-      
+    <section>
+      <h2>Conference Speakers</h2>
+
       <!-- Adam Rimmer -->
-      <div class="speaker-card">
-        <img src="Adam Rimmer.jpg" alt="Dr. Adam Rimmer">
-        <h3>Dr. Adam Rimmer</h3>
-        <div class="speaker-church">Walnut Grove Baptist Church</div>
-        <p>
-          Adam Rimmer is the Pastor at Walnut Grove Baptist Church and a full-time Prison Minister with Men of Valor Ministry. 
-          Originally from Knoxville, Tennessee, Adam moved to West Tennessee to be the chaplain at Whiteville Correctional Facility 
-          for two years before joining Men of Valor. He achieved his Bachelor's in Chemistry from the University of Tennessee Knoxville in 2013, 
-          a Master's of Divinity from Liberty University in 2019, a Doctorate of Ministry from Liberty University in 2021, 
-          and is nearing completion of a Ph.D. in Hermeneutics from Liberty University.
-        </p>
+      <div class="speaker-item">
+        <img src="Adam Rimmer.jpg" alt="Dr. Adam Rimmer" class="speaker-photo">
+        <div>
+          <span class="speaker-name">Dr. Adam Rimmer</span>
+          <span class="speaker-church">Walnut Grove Baptist Church</span>
+          <p>Adam Rimmer is the Pastor at Walnut Grove Baptist Church and a full time Prison Minister with Men of Valor Ministry. Originally from Knoxville, Tennessessee, Adam moved to West Tennessee to be the chaplain at Whiteville Correctional Facility for two years before leaving to be with Men of Valor. Adam achieved his Bachelor's in Chemistry from the University of Tennessee Knoxville in 2013, A Master's of Divinity from Liberty University in 2019, a Doctorate of Ministry from Liberty University in 2021, and almost finished with a PH.D in Hermeneutics from Liberty University.</p>
+        </div>
       </div>
 
       <!-- Alfonso Gilbert -->
-      <div class="speaker-card">
-        <img src="Alfonoso Gilbert.png" alt="Dr. Alfonso Gilbert">
-        <h3>Dr. Alfonso Gilbert</h3>
-        <div class="speaker-church">Men of Valor Prison Ministry</div>
-        <p>
-          Alfonso Gilbert is the chief education officer at Men of Valor Prison Ministry, speaking in prisons, organizations, and churches 
-          on trauma and recovery. He is also an adjunct professor for preaching and leadership at Grand Canyon Theological Seminary. 
-          He holds a Master of Divinity from Azusa Pacific University, a Master’s in Theological Studies from Bethel Seminary in San Diego, 
-          and a Doctorate in Leadership from Bethel University in St. Paul, Minnesota. Alfonso and his wife, Erica, live in Nashville, TN, 
-          with their 4 adult children, 2 sons-in-law, and 2 grandchildren.
-        </p>
+      <div class="speaker-item">
+        <img src="Alfonoso Gilbert.png" alt="Dr. Alfonso Gilbert" class="speaker-photo">
+        <div>
+          <span class="speaker-name">Dr. Alfonso Gilbert</span>
+          <span class="speaker-church">Men of Valor Prison Ministry</span>
+          <p>Alfonso Gilbert is the chief education officer at Men of Valor Prison Ministry, speaking in prisons, organizations, and churches on trauma and recovery. He is also an adjunct professor for preaching and leadership at Grand Canyon Theological Seminary, and holds a Master of Divinity from Azusa Pacific University in Los Angeles, a master's in theological studies from Bethel Seminary in San Diego, and doctorate in leadership from Bethel University in St. Paul, Minesota. Alfonso and his wife, Erica, live in Nashville, TN, with their 4 adult children, 2 sons-in-law, and 2 grandchildren.</p>
+        </div>
       </div>
 
       <!-- Tommy Warner -->
-      <div class="speaker-card">
-        <img src="Tommy Warner.png" alt="Tommy Warner">
-        <h3>Tommy Warner</h3>
-        <div class="speaker-church">Hardeman County Baptist Association Missionary</div>
-        <p>
-          Tommy Warner is an experienced West Tennessee Southern Baptist pastor with over 40 years of ministry experience. 
-          He has served on foreign mission trips to train pastors and leaders and came to the HCBA in October of 2013. 
-          He is the proud father of two boys, grandfather of five, and happily married for over 45 years to Beverly. 
-          Tommy graduated from Bolivar Central in 1977, earned his BA at Union University in 1986, and his Master of Divinity 
-          in 2008 from Mid-America Baptist Theological Seminary in Cordova, TN. His hobbies include sudoku, crossword puzzles, 
-          hunting, and farm work in West Tennessee.
-        </p>
+      <div class="speaker-item">
+        <img src="Tommy Warner.png" alt="Tommy Warner" class="speaker-photo">
+        <div>
+          <span class="speaker-name">Tommy Warner</span>
+          <span class="speaker-church">Hardeman County Baptist Association</span>
+          <p>He is an experienced West Tennessee Southern Baptist pastor with over 40 years of ministry experience. He has been on foreign mission trips to train pastors and other church leaders. He came to HCBA in October of 2013. He is the proud father of two boys, grandfather of five grandchildren, and is happily married for over 45 years to Beverly. He grew up in the Hardeman County, graduated high school from Bolivar Central in 1977, received his Bachelor of Arts in Union University in 1986, and later his Master of Divinity in 2008 from Mid-America Baptist Theological Seminary in Cordova, TN. His hobbies included sudoku and crossword puzzles with his wife as well as time spent on the land and in the woods of West Tennessee hunting and doing farm work.</p>
+        </div>
       </div>
 
-    </div>
+      <!-- Adam Barnhart -->
+      <div class="speaker-item">
+        <img src="Adam Headshot.jpeg" alt="Dr. Adam Barnhart" class="speaker-photo">
+        <div>
+          <span class="speaker-name">Dr. Adam Barnhart</span>
+          <span class="speaker-church">Freedom Hope Church / Cornerstone Bible Academy</span>
+          <p>Dr. Adam Barnhart is the Senior Founding Pastor of Freedom Hope Church in Oak Ridge, Tennessee, and the Founder and President of Cornerstone Bible Academy, where leaders and future pastors are trained for maximum kingdom and community impact. He holds a Doctor of Education with a specialty in Biblical Exposition and will soon begin a Doctor of Theology degree. Adam is the author of <em>Biblical Manhood: Charting a Course toward Biblical Manhood</em> and has two forthcoming books, <em>Shapes and Shadows</em> and <em>The Pulpit and Politics</em>. A devoted husband and father, he is also an experienced speaker, revivalist, and counselor, known for deep theology and intense practical application. He brings his passion for God’s Word and God’s people to all he does for King Jesus.</p>
+        </div>
+      </div>
+
+      <!-- Rusty Keltner -->
+      <div class="speaker-item">
+        <img src="Rusty Head.jpg" alt="Dr. Rusty Keltner" class="speaker-photo">
+        <div>
+          <span class="speaker-name">Dr. Rusty Keltner</span>
+          <span class="speaker-church">Porters Creek Baptist Church</span>
+          <p>Rusty Keltner was born in Brownsville, TN, and now lives in Middleton, TN with his wife of 26 years, Corrie, and their daughter, Kennedy. He has served in a variety of ministry roles across Mississippi, Arkansas, Indiana, and Tennessee, and currently serves as Senior Pastor of Porters Creek Baptist Church in Middleton. Rusty earned his B.A. in Liberal Studies and Communication from Crichton College, and both his M.Div. and Ph.D. from Mid-America Baptist Theological Seminary.</p>
+        </div>
+      </div>
+
+    </section>
   </main>
 
   <footer>
