--- a/speakers.html
+++ b/speakers.html
@@ -29,7 +29,7 @@
         <div>
           <span class="speaker-name">Dr. Adam Rimmer</span>
           <span class="speaker-church">Walnut Grove Baptist Church</span>
-          <p>Adam Rimmer is the Pastor at Walnut Grove Baptist Church and a full time Prison Minister with Men of Valor Ministry. Originally from Knoxville, Tennessessee, Adam moved to West Tennessee to be the chaplain at Whiteville Correctional Facility for two years before leaving to be with Men of Valor. Adam achieved his Bachelor's in Chemistry from the University of Tennessee Knoxville in 2013, A Master's of Divinity from Liberty University in 2019, a Doctorate of Ministry from Liberty University in 2021, and almost finished with a PH.D in Hermeneutics from Liberty University.</p>
+          <p>Adam Rimmer is the Pastor at Walnut Grove Baptist Church and a full time Prison Minister with Men of Valor Ministry. Originally from Knoxville, Tennessee, Adam moved to West Tennessee to be the chaplain at Whiteville Correctional Facility for two years before leaving to be with Men of Valor. Adam achieved his Bachelor's in Chemistry from the University of Tennessee Knoxville in 2013, a Master's of Divinity from Liberty University in 2019, a Doctorate of Ministry from Liberty University in 2021, and is nearly finished with a Ph.D. in Hermeneutics from Liberty University.</p>
         </div>
       </div>
 
@@ -39,7 +39,7 @@
         <div>
           <span class="speaker-name">Dr. Alfonso Gilbert</span>
           <span class="speaker-church">Men of Valor Prison Ministry</span>
-          <p>Alfonso Gilbert is the chief education officer at Men of Valor Prison Ministry, speaking in prisons, organizations, and churches on trauma and recovery. He is also an adjunct professor for preaching and leadership at Grand Canyon Theological Seminary, and holds a Master of Divinity from Azusa Pacific University in Los Angeles, a master's in theological studies from Bethel Seminary in San Diego, and doctorate in leadership from Bethel University in St. Paul, Minesota. Alfonso and his wife, Erica, live in Nashville, TN, with their 4 adult children, 2 sons-in-law, and 2 grandchildren.</p>
+          <p>Alfonso Gilbert is the chief education officer at Men of Valor Prison Ministry, speaking in prisons, organizations, and churches on trauma and recovery. He is also an adjunct professor for preaching and leadership at Grand Canyon Theological Seminary, and holds a Master of Divinity from Azusa Pacific University in Los Angeles, a master's in theological studies from Bethel Seminary in San Diego, and a doctorate in leadership from Bethel University in St. Paul, Minnesota. Alfonso and his wife, Erica, live in Nashville, TN, with their 4 adult children, 2 sons-in-law, and 2 grandchildren.</p>
         </div>
       </div>
 
@@ -49,7 +49,7 @@
         <div>
           <span class="speaker-name">Tommy Warner</span>
           <span class="speaker-church">Hardeman County Baptist Association</span>
-          <p>He is an experienced West Tennessee Southern Baptist pastor with over 40 years of ministry experience. He has been on foreign mission trips to train pastors and other church leaders. He came to HCBA in October of 2013. He is the proud father of two boys, grandfather of five grandchildren, and is happily married for over 45 years to Beverly. He grew up in the Hardeman County, graduated high school from Bolivar Central in 1977, received his Bachelor of Arts in Union University in 1986, and later his Master of Divinity in 2008 from Mid-America Baptist Theological Seminary in Cordova, TN. His hobbies included sudoku and crossword puzzles with his wife as well as time spent on the land and in the woods of West Tennessee hunting and doing farm work.</p>
+          <p>He is an experienced West Tennessee Southern Baptist pastor with over 40 years of ministry experience. He has been on foreign mission trips to train pastors and other church leaders. He came to HCBA in October of 2013. He is the proud father of two boys, grandfather of five grandchildren, and is happily married for over 45 years to Beverly. He grew up in Hardeman County, graduated high school from Bolivar Central in 1977, received his Bachelor of Arts from Union University in 1986, and later his Master of Divinity in 2008 from Mid-America Baptist Theological Seminary in Cordova, TN. His hobbies include sudoku, crossword puzzles, and spending time outdoors in the woods of West Tennessee hunting and working on the farm.</p>
         </div>
       </div>
 
@@ -58,7 +58,7 @@
         <img src="Adam Headshot.jpeg" alt="Dr. Adam Barnhart" class="speaker-photo">
         <div>
           <span class="speaker-name">Dr. Adam Barnhart</span>
-          <span class="speaker-church">Freedom Hope Church / Cornerstone Bible Academy</span>
+          <span class="speaker-church">Freedom Hope Church</span>
           <p>Dr. Adam Barnhart is the Senior Founding Pastor of Freedom Hope Church in Oak Ridge, Tennessee, and the Founder and President of Cornerstone Bible Academy, where leaders and future pastors are trained for maximum kingdom and community impact. He holds a Doctor of Education with a specialty in Biblical Exposition and will soon begin a Doctor of Theology degree. Adam is the author of <em>Biblical Manhood: Charting a Course toward Biblical Manhood</em> and has two forthcoming books, <em>Shapes and Shadows</em> and <em>The Pulpit and Politics</em>. A devoted husband and father, he is also an experienced speaker, revivalist, and counselor, known for deep theology and intense practical application. He brings his passion for God’s Word and God’s people to all he does for King Jesus.</p>
         </div>
       </div>
@@ -70,6 +70,19 @@
           <span class="speaker-name">Dr. Rusty Keltner</span>
           <span class="speaker-church">Porters Creek Baptist Church</span>
           <p>Rusty Keltner was born in Brownsville, TN, and now lives in Middleton, TN with his wife of 26 years, Corrie, and their daughter, Kennedy. He has served in a variety of ministry roles across Mississippi, Arkansas, Indiana, and Tennessee, and currently serves as Senior Pastor of Porters Creek Baptist Church in Middleton. Rusty earned his B.A. in Liberal Studies and Communication from Crichton College, and both his M.Div. and Ph.D. from Mid-America Baptist Theological Seminary.</p>
+        </div>
+      </div>
+
+      <!-- Matt "Stone Cold" Boatwright -->
+      <div class="speaker-item">
+        <img src="Stone Cold Boat.jpg" alt="Matt Boatwright" class="speaker-photo">
+        <div>
+          <span class="speaker-name">Matt “Stone Cold” Boatwright</span>
+          <span class="speaker-church">Parrans Chapel Baptist Church</span>
+          <p>When Matt Boatwright sent in his headshot, the Eleos team expected a nice, polished ministry photo, maybe a cross in the background, maybe a pulpit. What they got instead looked like the cover of <em>Stone Cold Gospel: The Revival Strikes Back.</em></p>
+          <p>Known to friends and fellow ministers as “Stone Cold Boatwright,” Matt serves as pastor of Parrans Chapel Baptist Church, where the sermons come straight from Scripture and the altar calls hit harder than a metal folding chair at youth camp. His preaching is fiery, his theology solid, and his delivery? Let’s just say <em>Austin 3:16 says he just preached the truth.</em></p>
+          <p>When he’s not opening the Word or laying the smackdown on sin, Matt’s loving his family, serving his community, and proving every Sunday that <strong>Grace 3:16 says you just got forgiven.</strong></p>
+          <p>He’s not here to entertain, he’s here to edify, electrify, and walk off stage in slow motion while the choir sings <em>Victory in Jesus.</em></p>
         </div>
       </div>
 
