--- a/speakers.html
+++ b/speakers.html
@@ -73,6 +73,16 @@
         </div>
       </div>
 
+      <!-- Kyle Rhea -->
+      <div class="speaker-item">
+        <img src="IMG_1929.jpg" alt="Kyle Rhea" class="speaker-photo">
+        <div>
+          <span class="speaker-name">Kyle Rhea</span>
+          <span class="speaker-church">First Baptist Church of Bolivar</span>
+          <p>My name is Kyle Rhea and it is my blessing and privilege to serve the Lord as Senior Pastor here at First Baptist Church. I have been serving the Lord now for seventeen years in pastoring and preaching! I have a Bachelor in Theology from Andersonville Theological Seminary and currently working on a Masters in Theological Studies.</p>
+        </div>
+      </div>
+
       <!-- Matt "Stone Cold" Boatwright -->
       <div class="speaker-item">
         <img src="Stone Cold Boat.jpg" alt="Matt Boatwright" class="speaker-photo">
