--- a/speakers.html
+++ b/speakers.html
@@ -83,16 +83,13 @@
         </div>
       </div>
 
-      <!-- Matt "Stone Cold" Boatwright -->
+      <!-- Matt Boatwright -->
       <div class="speaker-item">
-        <img src="Stone Cold Boat.jpg" alt="Matt Boatwright" class="speaker-photo">
+        <img src="IMG_0107.JPG" alt="Matt Boatwright" class="speaker-photo">
         <div>
-          <span class="speaker-name">Matt “Stone Cold” Boatwright</span>
+          <span class="speaker-name">Matt Boatwright</span>
           <span class="speaker-church">Parrans Chapel Baptist Church</span>
-          <p>When Matt Boatwright sent in his headshot, the Eleos team expected a nice, polished ministry photo, maybe a cross in the background, maybe a pulpit. What they got instead looked like the cover of <em>Stone Cold Gospel: The Revival Strikes Back.</em></p>
-          <p>Known to friends and fellow ministers as “Stone Cold Boatwright,” Matt serves as pastor of Parrans Chapel Baptist Church, where the sermons come straight from Scripture and the altar calls hit harder than a metal folding chair at youth camp. His preaching is fiery, his theology solid, and his delivery? Let’s just say <em>Austin 3:16 says he just preached the truth.</em></p>
-          <p>When he’s not opening the Word or laying the smackdown on sin, Matt’s loving his family, serving his community, and proving every Sunday that <strong>Grace 3:16 says you just got forgiven.</strong></p>
-          <p>He’s not here to entertain, he’s here to edify, electrify, and walk off stage in slow motion while the choir sings <em>Victory in Jesus.</em></p>
+          <p>Matt Boatwright serves as the pastor of Parrans Chapel Baptist Church and also teaches band at Bolivar Middle School. He is passionate about serving his church, his students, and his community through both ministry and music. Known for his dedication, compassion, and genuine faith, Matt strives to reflect Christ in every area of life and uses his gifts to inspire the next generation both in the classroom and in the congregation.</p>
         </div>
       </div>
 
