--- a/index.html
+++ b/index.html
@@ -20,10 +20,38 @@
   </header>
 
   <main class="with-sidebars">
+    <!-- Left Sidebar: Eleos Blurb -->
     <aside class="sidebar left">
-      <p>“When Jesus saw him lying there, and knew that he had already been a long time in that condition, He said to him, <strong>‘Do you want to be well?’</strong>” <br><em>John 5:6 NASB</em></p>
+      <p>
+        <strong>William Shakespeare once asked, “What’s in a name?”</strong>
+        <br><br>
+        Names carry stories, legacies, and expectations. Some names echo through history—Vanderbilt, Rockefeller. Others carry character—Mickey, Donald. Some even shape perception—President, King, or Pastor.
+        <br><br>
+        But beyond reputation or recognition, Scripture shows us that names matter to God. Jesus often changed names—Simon to Peter, Saul to Paul, Abram to Abraham. Each new name marked a new identity, a redeemed purpose, a divine encounter.
+        <br><br>
+        So to you, we offer this name: <strong>Eleos (ἔλεος)</strong>.
+        <br><br>
+        In Greek, <em>Eleos</em> means mercy, compassion, pity. It is the cry of the broken heart and the comfort of a loving Father. It is the character of Christ toward all who are weary, wounded, and waiting for renewal.
+        <br><br>
+        Eleos is for the hurting.<br>
+        Eleos is for those who strive and struggle to overcome the pain of the past.<br>
+        Generational curses, regrets, and failures all fall at the feet of Him who weeps over His people and whispers, <em>Eleos</em>.
+        <br><br>
+        It is our hope that during this conference, you will experience <em>Eleos</em>—
+        not as a word, but as a Person.
+        Not as a sound, but as a Presence.
+        <br><br>
+        And when you return home, may <em>Eleos</em> follow you, as the Psalmist declared:
+        <br><br>
+        <strong>“Surely goodness and mercy shall follow me all the days of my life.” — Psalm 23:6</strong>
+        <br><br>
+        If you’ve only been surviving, we invite you to <em>Eleos</em>—
+        where, in the power of Jesus’ Name,
+        you will begin to live again.
+      </p>
     </aside>
 
+    <!-- Center Card -->
     <section class="card">
       <h1>Welcome to Eleos Conference 2026</h1>
       <p>
@@ -32,17 +60,27 @@
       <h2>Conference Details</h2>
       <p><strong>Date:</strong> January 2–3, 2026</p>
       <p><strong>Location:</strong> First Baptist Church of Bolivar</p>
+
+      <!-- Register Button -->
+      <div style="text-align:center; margin-top:2rem;">
+        <a href="register.html" class="btn">Register Now</a>
+      </div>
     </section>
 
+    <!-- Right Sidebar: Conference Purpose -->
     <aside class="sidebar right">
-      <p><strong>“Do you want to be well?”</strong></p>
+      <p>
+        <strong>What is Eleos?</strong><br><br>
+        Eleos Conference is a two-day gathering devoted to spiritual renewal, biblical teaching, and equipping believers to carry mercy into their communities.  
+        <br><br>
+        Designed for pastors, ministry leaders, volunteers, and believers of every background, Eleos invites you to pause, refocus, and rediscover the compassion of Christ.  
+        <br><br>
+        Whether you lead from a pulpit, a classroom, a home, or a cell block—Eleos is for you.  
+        <br><br>
+        <em>Because mercy changes everything.</em>
+      </p>
     </aside>
   </main>
-
-  <!-- Register Button Section -->
-  <div style="text-align: center; margin: 2rem 0;">
-    <a href="register.html" class="btn">Register Now</a>
-  </div>
 
   <footer>
     <p>&copy; 2026 Eleos Conference. All rights reserved.</p>
