--- a/index.html
+++ b/index.html
@@ -1,15 +1,15 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>Eleos Conference 2026</title>
-  <link rel="stylesheet" href="style.css">
+  <link rel="stylesheet" href="style.css" />
 </head>
 <body>
   <header>
     <div class="logo-container">
-      <img src="Eleos-removebg-preview.png" alt="Eleos Conference 2026 Logo">
+      <img src="Eleos-removebg-preview.png" alt="Eleos Conference 2026 Logo" />
     </div>
     <nav>
       <a href="index.html">Home</a>
@@ -20,64 +20,55 @@
   </header>
 
   <main class="with-sidebars">
-    <!-- Left Sidebar: Eleos Blurb -->
+    <!-- LEFT SIDEBAR -->
     <aside class="sidebar left">
       <p>
-        <strong>William Shakespeare once asked, “What’s in a name?”</strong>
-        <br><br>
+        <strong>“What’s in a name?”</strong><br><br>
         Names carry stories, legacies, and expectations. Some names echo through history—Vanderbilt, Rockefeller. Others carry character—Mickey, Donald. Some even shape perception—President, King, or Pastor.
         <br><br>
         But beyond reputation or recognition, Scripture shows us that names matter to God. Jesus often changed names—Simon to Peter, Saul to Paul, Abram to Abraham. Each new name marked a new identity, a redeemed purpose, a divine encounter.
         <br><br>
         So to you, we offer this name: <strong>Eleos (ἔλεος)</strong>.
         <br><br>
-        In Greek, <em>Eleos</em> means mercy, compassion, pity. It is the cry of the broken heart and the comfort of a loving Father. It is the character of Christ toward all who are weary, wounded, and waiting for renewal.
+        In Greek, Eleos means mercy, compassion, pity. It is the cry of the broken heart and the comfort of a loving Father. It is the character of Christ toward all who are weary, wounded, and waiting for renewal.
         <br><br>
-        Eleos is for the hurting.<br>
-        Eleos is for those who strive and struggle to overcome the pain of the past.<br>
-        Generational curses, regrets, and failures all fall at the feet of Him who weeps over His people and whispers, <em>Eleos</em>.
+        Eleos is for the hurting.  
+        Eleos is for those who strive and struggle to overcome the pain of the past.  
+        Generational curses, regrets, and failures all fall at the feet of Him who weeps over His people and whispers, <em>Eleos.</em>
         <br><br>
-        It is our hope that during this conference, you will experience <em>Eleos</em>—
-        not as a word, but as a Person.
-        Not as a sound, but as a Presence.
+        It is our hope that during this conference, you will experience Eleos— not as a word, but as a Person. Not as a sound, but as a Presence.
         <br><br>
-        And when you return home, may <em>Eleos</em> follow you, as the Psalmist declared:
+        And when you return home, may Eleos follow you, as the Psalmist declared:  
+        <em>“Surely goodness and mercy shall follow me all the days of my life.” — Psalm 23:6</em>
         <br><br>
-        <strong>“Surely goodness and mercy shall follow me all the days of my life.” — Psalm 23:6</strong>
-        <br><br>
-        If you’ve only been surviving, we invite you to <em>Eleos</em>—
-        where, in the power of Jesus’ Name,
-        you will begin to live again.
+        If you’ve only been surviving, we invite you to Eleos—where, in the power of Jesus’ Name, you will begin to live again.
       </p>
     </aside>
 
-    <!-- Center Card -->
+    <!-- CENTER MAIN CARD -->
     <section class="card">
       <h1>Welcome to Eleos Conference 2026</h1>
       <p>
-        Join us for a gathering of leaders, teachers, and disciples dedicated to exploring the Word of God, strengthening the Church, and equipping believers for ministry.  
+        Join us for a gathering of leaders, teachers, and disciples dedicated to exploring the Word of God, strengthening the Church, and equipping believers for ministry.
       </p>
       <h2>Conference Details</h2>
       <p><strong>Date:</strong> January 2–3, 2026</p>
       <p><strong>Location:</strong> First Baptist Church of Bolivar</p>
-
-      <!-- Register Button -->
-      <div style="text-align:center; margin-top:2rem;">
-        <a href="register.html" class="btn">Register Now</a>
-      </div>
     </section>
 
-    <!-- Right Sidebar: Conference Purpose -->
+    <!-- RIGHT SIDEBAR -->
     <aside class="sidebar right">
       <p>
         <strong>What is Eleos?</strong><br><br>
-        Eleos Conference is a two-day gathering devoted to spiritual renewal, biblical teaching, and equipping believers to carry mercy into their communities.  
+        Eleos is a two-day conference dedicated to helping believers find healing, hope, and restoration through the mercy of Christ.
         <br><br>
-        Designed for pastors, ministry leaders, volunteers, and believers of every background, Eleos invites you to pause, refocus, and rediscover the compassion of Christ.  
+        Hosted at <strong>First Baptist Church of Bolivar</strong>, this gathering brings together pastors, teachers, and leaders who share one mission—to see hearts renewed and lives changed through God’s Word.
         <br><br>
-        Whether you lead from a pulpit, a classroom, a home, or a cell block—Eleos is for you.  
+        Throughout the weekend, you’ll hear powerful messages from speakers like <strong>Adam Rimmer, Tommy Warner, Alfonso Gilbert, Rusty Keltner, Adam Barnhart, Kyle Rhea,</strong> and <strong>Matt Boatwright</strong>, each addressing the struggles that weigh on the soul—grief, trauma, addiction, anger, and the longing to be made whole again.
         <br><br>
-        <em>Because mercy changes everything.</em>
+        Worship, fellowship, and biblical teaching come together in a space where mercy isn’t just preached—it’s experienced.
+        <br><br>
+        If you’re looking for a place to rest, rebuild, and remember that God still heals the brokenhearted, <strong>Eleos is for you.</strong>
       </p>
     </aside>
   </main>
