--- a/index.html
+++ b/index.html
@@ -54,6 +54,12 @@
       <h2>Conference Details</h2>
       <p><strong>Date:</strong> January 2–3, 2026</p>
       <p><strong>Location:</strong> First Baptist Church of Bolivar</p>
+      <p><strong>Address:</strong> 826 W Market Street, Bolivar, TN 38008</p>
+      <br>
+      <h2>Schedule</h2>
+      <p><strong>Friday, January 2:</strong> 5:30 PM – 8:30 PM</p>
+      <p><strong>Saturday, January 3:</strong> 9:00 AM – 7:00 PM</p>
+      <p><em>Lunch and dinner will be served on Saturday.</em></p>
     </section>
 
     <!-- RIGHT SIDEBAR -->
