--- a/speakers.html
+++ b/speakers.html
@@ -70,6 +70,18 @@
           <span class="speaker-name">Dr. Rusty Keltner</span>
           <span class="speaker-church">Porters Creek Baptist Church</span>
           <p>Rusty Keltner was born in Brownsville, TN, and now lives in Middleton, TN with his wife of 26 years, Corrie, and their daughter, Kennedy. He has served in a variety of ministry roles across Mississippi, Arkansas, Indiana, and Tennessee, and currently serves as Senior Pastor of Porters Creek Baptist Church in Middleton. Rusty earned his B.A. in Liberal Studies and Communication from Crichton College, and both his M.Div. and Ph.D. from Mid-America Baptist Theological Seminary.</p>
+          
+          <!-- Rusty Keltner Video Embed -->
+          <div class="speaker-video">
+            <iframe width="560" height="315"
+              src="https://www.youtube.com/embed/_b9paCz3FH4?si=kzzIqdJ42V1dm3M5"
+              title="Dr. Rusty Keltner - Eleos Conference 2026"
+              frameborder="0"
+              allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
+              referrerpolicy="strict-origin-when-cross-origin"
+              allowfullscreen>
+            </iframe>
+          </div>
         </div>
       </div>
 
