--- a/speakers.html
+++ b/speakers.html
@@ -50,6 +50,18 @@
           <span class="speaker-name">Tommy Warner</span>
           <span class="speaker-church">Hardeman County Baptist Association</span>
           <p>He is an experienced West Tennessee Southern Baptist pastor with over 40 years of ministry experience. He has been on foreign mission trips to train pastors and other church leaders. He came to HCBA in October of 2013. He is the proud father of two boys, grandfather of five grandchildren, and is happily married for over 45 years to Beverly. He grew up in Hardeman County, graduated high school from Bolivar Central in 1977, received his Bachelor of Arts from Union University in 1986, and later his Master of Divinity in 2008 from Mid-America Baptist Theological Seminary in Cordova, TN. His hobbies include sudoku, crossword puzzles, and spending time outdoors in the woods of West Tennessee hunting and working on the farm.</p>
+
+          <!-- Tommy Warner Video Embed -->
+          <div class="speaker-video">
+            <iframe width="560" height="315"
+              src="https://www.youtube.com/embed/8HlaC3j05K8?si=fEWuQLM_FlSdd_sY"
+              title="Tommy Warner - Eleos Conference 2026"
+              frameborder="0"
+              allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
+              referrerpolicy="strict-origin-when-cross-origin"
+              allowfullscreen>
+            </iframe>
+          </div>
         </div>
       </div>
 
@@ -60,6 +72,18 @@
           <span class="speaker-name">Dr. Adam Barnhart</span>
           <span class="speaker-church">Freedom Hope Church</span>
           <p>Dr. Adam Barnhart is the Senior Founding Pastor of Freedom Hope Church in Oak Ridge, Tennessee, and the Founder and President of Cornerstone Bible Academy, where leaders and future pastors are trained for maximum kingdom and community impact. He holds a Doctor of Education with a specialty in Biblical Exposition and will soon begin a Doctor of Theology degree. Adam is the author of <em>Biblical Manhood: Charting a Course toward Biblical Manhood</em> and has two forthcoming books, <em>Shapes and Shadows</em> and <em>The Pulpit and Politics</em>. A devoted husband and father, he is also an experienced speaker, revivalist, and counselor, known for deep theology and intense practical application. He brings his passion for God’s Word and God’s people to all he does for King Jesus.</p>
+
+          <!-- Adam Barnhart Video Embed -->
+          <div class="speaker-video">
+            <iframe width="560" height="315"
+              src="https://www.youtube.com/embed/fKfekfgpjz4?si=x-Y-5SryGuQNRC7i"
+              title="Dr. Adam Barnhart - Eleos Conference 2026"
+              frameborder="0"
+              allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
+              referrerpolicy="strict-origin-when-cross-origin"
+              allowfullscreen>
+            </iframe>
+          </div>
         </div>
       </div>
 
@@ -70,7 +94,7 @@
           <span class="speaker-name">Dr. Rusty Keltner</span>
           <span class="speaker-church">Porters Creek Baptist Church</span>
           <p>Rusty Keltner was born in Brownsville, TN, and now lives in Middleton, TN with his wife of 26 years, Corrie, and their daughter, Kennedy. He has served in a variety of ministry roles across Mississippi, Arkansas, Indiana, and Tennessee, and currently serves as Senior Pastor of Porters Creek Baptist Church in Middleton. Rusty earned his B.A. in Liberal Studies and Communication from Crichton College, and both his M.Div. and Ph.D. from Mid-America Baptist Theological Seminary.</p>
-          
+
           <!-- Rusty Keltner Video Embed -->
           <div class="speaker-video">
             <iframe width="560" height="315"
@@ -102,6 +126,18 @@
           <span class="speaker-name">Matt Boatwright</span>
           <span class="speaker-church">Parrans Chapel Baptist Church</span>
           <p>Matt Boatwright serves as the pastor of Parrans Chapel Baptist Church and also teaches band at Bolivar Middle School. He is passionate about serving his church, his students, and his community through both ministry and music. Known for his dedication, compassion, and genuine faith, Matt strives to reflect Christ in every area of life and uses his gifts to inspire the next generation both in the classroom and in the congregation.</p>
+
+          <!-- Matt Boatwright Video Embed -->
+          <div class="speaker-video">
+            <iframe width="560" height="315"
+              src="https://www.youtube.com/embed/6iVfD-fk4gk?si=342PeD-CInupUXfi"
+              title="Matt Boatwright - Eleos Conference 2026"
+              frameborder="0"
+              allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
+              referrerpolicy="strict-origin-when-cross-origin"
+              allowfullscreen>
+            </iframe>
+          </div>
         </div>
       </div>
 
